--- a/exB/index.html
+++ b/exB/index.html
@@ -16,7 +16,7 @@
                 <label for="number">Insira um Numero</label>
                 <input type="number" name="number" id="number">
             </div>
-            <button type="button" id="submitButton" class="submitButton">Submeter</button>
+            <button type="button" id="submitButton" class="submitButton">Enviar</button>
             <div class="result" id="result"></div>
         </form>
     </main>
